--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
     font-family: 'Roboto Slab', serif;
+    margin: 0;
+
 }
 
 h1 {
@@ -9,7 +11,7 @@ h1 {
 p {
     text-align: justify;
     padding-right: 5%;
-    padding-bottom: 10px;
+    padding-bottom: 15px;
 }
 
 .color-picker {
@@ -38,4 +40,14 @@ p {
     color: white;
     padding: 10px;
     border-radius: 25px;
+}
+
+.set-background {
+    background-image: url(images/shapes/7.png);
+    background-repeat: no-repeat;
+}
+
+.set-font {
+    font-size: 25px;
+    font-weight: 700;
 }
