--- a/style.css
+++ b/style.css
@@ -111,3 +111,34 @@ h3 {
     font-weight: 900;
     font-size: 20px;
 }
+
+.follower-item {
+    width: 50%;
+    margin-left: 2%;
+    margin-right: 1%;
+    padding-left: 3%;
+    padding-top: 2%;
+    border-radius: 8%;
+    box-shadow: 10px 10px 35px rgb(248, 245, 245);
+    text-align: center;
+}
+
+footer h1 {
+
+    text-align: center;
+    height: 50px;
+    padding-top: 50px;
+    margin: 0;
+    background-color: rgb(66, 75, 83);
+
+}
+
+footer h4 {
+    text-align: center;
+    height: 20px;
+    padding-top: 5px;
+    padding-bottom: 3%;
+    margin: 0;
+    color: snow;
+    background-color: rgb(66, 75, 83);
+}
